--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,7 @@ fabric.properties
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/android,androidstudio,kotlin
+
+# Kotlin 2.0
+.DS_Store
+.kotlin/
