--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.2"
 composeBom = "2025.01.00"
 kspplugin = "2.0.21-1.0.25"
+lifecycleRuntimeComposeAndroid = "2.8.7"
 
 # kotlinx
 kotlinx-serialization-json = "1.8.0"
@@ -44,6 +45,7 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation = { group = "androidx.navigation", name = "navigation-compose" }
+androidx-lifecycle-runtime-compose-android = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose-android", version.ref = "lifecycleRuntimeComposeAndroid" }
 
 # Kotlinx
 kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
@@ -87,5 +89,7 @@ androidx = [
     "androidx-ui-tooling-preview",
     "androidx-material3",
     "androidx-navigation",
+    "androidx-lifecycle-runtime-compose-android"
 ]
 hilt = ["dagger-hilt", "hilt-navigation-compose"]
+okhttp = ["okhttp", "okhttp-logging-interceptor"]
